<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RallyeSoft</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main">RallyeSoft</string>
    <string name="dash_menu">Menü</string>
    <string name="overview">Übersicht</string>
    <string name="unsupported_link">Eine nicht unterstützte Funktion wurde ausgewählt</string>
    <string name="send">Senden</string>
    <string name="picture_taken">Bild gemacht!</string>
    <string name="map">Karte</string>
    <string name="overview_welcome">Willkommen zu RallyeSoft</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="photo">Foto</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbruch</string>
    <string name="configuration">Configuration</string>
    <string name="server">Server</string>
    <string name="group">Gruppennummer</string>
    <string name="name">Name</string>
    <string name="password">Passwort</string>
    <string name="status">Status</string>
    <string name="unavailable">Nicht verfügbar</string>
    <string name="connected">Verbunden</string>
    <string name="notConnected">Getrennt</string>
    <string name="refresh">Aktualisieren</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="image_level">Bild-Größe</string>
    <string name="image_level_large">Groß</string>
    <string name="image_level_small">Klein</string>
    <string name="select_take_picture">Foto aufnehmen oder auswählen</string>
    <string name="invalid">Ungültig</string>
    <string name="share_barcode">Share Barcode</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="center">Zentrieren</string>
	<string name="next">Weiter</string>
	<string name="back">Zurück</string>
	<string name="connection_assistant">Verbindungs-Assistent</string>
	<string name="invalid_url">Ungültige Addresse</string>
	<string name="invalid_server">Kein Server erreichbar</string>
	<string name="invalid_login">Ungültiger Login</string>
	<string name="finish">Beenden</string>
	<string name="assistant_choose_server">Bitte einen Rallye-Server angeben</string>
	<string name="test_server">Verbindung testen</string>
	<string name="assistant_choose_name">Username für diesen Server</string>
	<string name="assistant_group_password">Passwort zur gewählten Gruppe</string>
	<string name="invalid_username">Ungültiger / leerer / zu kurzer Username</string>
	<string name="invalid_password">Ungültiges / leeres / zu kurzes Passwort</string>
    <string name="uploading">Hochladen</string>
	<string name="upload_complete">Hochgeladen</string>
	<string name="need_connection">Diese Funktion benötigt eine Verbindung zu einem Server</string>
	<string name="welcome_msg">Willkommen zu RallyeSoft.\nBitte verwenden Sie den Verbindungs-Assistenten um sich mit einem Rallye-Server zu verbinden\n\nViele Funktionen der App stehen erst zur Verfügung wenn die App sich mit mindestens einem Server verbunden hat.</string>
	<string name="connection_failure">Verbindung Fehlgeschlagen</string>
    <string name="ssl">SSL</string>
    <string name="port">Port</string><string name="path">Pfad</string>
	<string name="chat_post_failure">Senden der Nachricht fehlgeschlagen...</string>
	<string name="locspecific_tasks">Ortsgebundene Aufgaben</string>
	<string name="ubiquitous_tasks">Nichtgebundene Aufgaben</string>
	<string name="resize">Größe wechseln</string>
	<string name="welcome">Wilkommen</string>
	<string name="tasks">Aufgaben</string>
	<string name="next_move">Nächster Zug</string>
	<string name="chat">Chat</string>
	<string name="no_nodes">No Nodes to center on!</string>
	<string name="of">von</string>
	<string name="menu_drawer_open">Drawer Menü öffnen</string>
	<string name="menu_drawer_close">Drawer Menü schließen</string>
	<string name="reconnect">Erneut verbinden</string><string name="description">Beschreibung</string>

</resources>