<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<EditText
			android:id="@+id/name"
			android:inputType="textPersonName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginBottom="4dp"
			android:hint="@string/name"/>

	<EditText
			android:id="@+id/pass"
			android:inputType="textPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:layout_marginBottom="4dp"
			android:imeOptions="actionNext"
			android:hint="@string/password"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/next"
			android:layout_gravity="right"
			android:layout_margin="16dp"
			android:text="@string/next"/>
</LinearLayout>